service/tests/requests/snapshots/roles/cannot_assign_permission_to_role_without_permission@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    403,
    "{\"error\":\"Forbidden\"}",
)
