service/tests/requests/snapshots/roles/cannot_assign_permission_when_payload_is_invalid@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"permission_id\":\"Permission ID must be a positive integer\",\"role_id\":\"Role ID must be a positive integer\"}}",
)
