service/tests/requests/snapshots/roles/cannot_assign_permission_when_role_already_has_permission@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    409,
    "{\"error\":\"Role already has permission assigned\"}",
)
