service/tests/requests/snapshots/roles/cannot_create_role_when_description_is_too_long@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"description\":\"Description must be under 256 characters\"}}",
)
