service/tests/requests/snapshots/roles/cannot_create_role_when_name_already_exists@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    409,
    "{\"error\":\"Role administrator already exists\",\"code\":\"entity_already_exists\"}",
)
