service/tests/requests/snapshots/roles/cannot_create_role_when_name_is_invalid@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"{\\\"name\\\":\\\"Only letters, numbers and underscores can be used.\\\"}\"}",
)
