service/tests/requests/snapshots/roles/cannot_create_role_without_credentials@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    401,
    "{\"error\":\"Missing credentials\"}",
)
