service/tests/requests/snapshots/roles/cannot_get_role_when_pid_is_invalid@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"The supplied resource identifier is invalid.\",\"code\":\"invalid_path_parameter\",\"field\":\"pid\"}",
)
