service/tests/requests/snapshots/roles/cannot_revoke_permission_from_role_without_permission@roles.snap
---
source: tests/requests/roles.rs
expression: "(response.status_code(), response.text())"
---
(
    403,
    "{\"error\":\"Forbidden\",\"code\":\"forbidden\"}",
)
